# aruco-follower-indigo-ros-pkg

./: CMakeLists.txt  camera.yml  package.xml
include/br/edu/unifei/expertinos/aruco_follower/: ArucoFollower.h
src/: ArucoFollower.cpp  aruco_follower_node.cpp  testeAruco.cpp
