<?xml version="1.0"?>
<package>
	<name>aruco_follower</name>
	<version>0.0.0</version>
	<description>The aruco_follower package</description>
	<maintainer email="expertinos.unifei@gmail.com">Expertinos UNIFEI</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>cv_bridge</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>opencv2</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>std_msgs</build_depend>

	<run_depend>cv_bridge</run_depend>
	<run_depend>image_transport</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>vision_opencv</run_depend>

	<export>
	</export>
</package>
